unpackaged/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Used for debugging, logging exceptions, errors &amp; API requests/response.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>