unpackaged/main/default/objects/Log__c/fields/API_Request__c.field-meta.xml
<CustomField>
    <fullName>API_Request__c</fullName>
    <description>Store the details about the API requests</description>
    <label>API Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>