unpackaged/main/default/objects/Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Stores the log level</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>FATAL</fullName>
                <label>EXCEPTION</label>
            </value>
            <value>
                <fullName>INFO</fullName>
                <label>API INFO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>