unpackaged/main/default/objects/Log__c/fields/Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Date__c</fullName>
    <description>The date when the entry was logged.</description>
    <label>Log Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>