unpackaged/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Stores the exception message.</description>
    <label>Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>