unpackaged/main/default/objects/Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Stores the method name</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>