unpackaged/main/default/objects/Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Stores the Id of the record.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>