unpackaged/main/default/objects/Log__c/fields/ReplayId__c.field-meta.xml
<CustomField>
    <fullName>ReplayId__c</fullName>
    <description>Stores the replay Id of the PE - will act as a unique identifier.</description>
    <label>ReplayId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>