unpackaged/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Stores the exception type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System.DmlException</fullName>
            </value>
            <value>
                <fullName>System.QueryException</fullName>
            </value>
            <value>
                <fullName>System.NullPointerException</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>