unpackaged/main/default/objects/Log__c/fields/User_Info__c.field-meta.xml
<CustomField>
    <fullName>User_Info__c</fullName>
    <description>Stores the user info</description>
    <label>User Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>